fix: correcting the gaps between the cards

--- a/editor-components/feature/feature40/feature40.module.scss
+++ b/editor-components/feature/feature40/feature40.module.scss
@@ -14,6 +14,11 @@
                 .description {
                     color: var(--color-white);
                 }
+
+                .subtitle {
+                    background: none;
+                    padding: 0;
+                }
             }
 
             .card-container {
@@ -63,16 +68,11 @@
         gap: var(--composer-gap-xl);
 
         .text-content {
-            align-items: flex-start;
 
             .subtitle,
             .title,
             .description {
-                text-align: left;
-            }
-
-            .subtitle {
-                margin-left: 0;
+                content: "";
             }
         }
 
@@ -81,7 +81,7 @@
 
             .card-wrapper {
                 display: flex;
-                gap: var(--composer-gap-sm);
+                gap: var(--composer-gap-md);
                 flex-direction: column;
 
                 .icon-box {
@@ -96,6 +96,10 @@
 
                     &.no-bg {
                         background-color: transparent;
+                        justify-content: flex-start;
+                        padding: 0;
+                        height: auto;
+                        width: auto;
 
                         .card-icon {
                             color: var(--composer-primary-color);
@@ -108,15 +112,17 @@
                         display: flex;
 
                         &.is-image {
-                            width: 100%;
-                            height: 100%;
+                            width: var(--composer-gap-lg);
+                            height: var(--composer-gap-lg);
                         }
                     }
                 }
 
                 .card-content {
-                    flex: 1;
+                    display: flex;
+                    flex-direction: column;
                     align-items: flex-start;
+                    gap: var(--composer-gap-md);
 
                     .card-title,
                     .card-description {
@@ -171,16 +177,25 @@
     .container {
         .max-content {
             .card-container {
-                gap: var(--composer-gap-md);
-
                 .card-wrapper {
+                    gap: var(--composer-gap-sm);
+
                     .icon-box {
                         height: var(--composer-gap-xl);
                         width: var(--composer-gap-xl);
 
                         .card-icon {
                             font-size: 1.5rem;
+
+                            &.is-image {
+                                width: var(--composer-gap-md);
+                                height: var(--composer-gap-md);
+                            }
                         }
+                    }
+
+                    .card-content {
+                        gap: var(--composer-gap-sm);
                     }
                 }
             }
